--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,9 @@
 }
 
 .search-bar {
+  margin: 0 auto;
+  /* width: 50%; */
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
